chore: pruned translations

--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -10,11 +10,11 @@
   "account_import_short": "Conta de importação",
   "account_info": "Informações da Conta",
   "account_watch": "Importe uma conta que você gostaria de observar apenas",
-  "account_watch_short": "Conta do relógio",
+  "account_watch_short": "Observar Conta",
   "accounts": "Contas",
   "actions": "Ações",
   "activate": "Ativar",
-  "activate_hint": "Organize as palavras da frase secreta na ordem correta. Ao fazer isso, você confirma que manteve a senha longa segura. Lembre-se de que você não poderá controlar sua conta sem a senha longa.",
+  "activate_hint": "Organize as palavras da frase secreta na ordem correta. Ao fazer isso, você confirma que manteve a frase secreta segura. Lembre-se de que você não poderá controlar sua conta sem a frase secreta.",
   "activate_request_successful": "Ativação solicitada com sucesso. Sua conta será ativada em alguns instantes.",
   "activation_failed": "Ativação falhou:",
   "activation_success": "Ativação solicitada com sucesso. Sua conta será ativada em alguns instantes.",
@@ -269,8 +269,8 @@
   "payload_length": "Comprimento da Carga Útil",
   "payment": "Pagamento",
   "payments": "Pagamentos",
-  "peer": "Par",
-  "peers": "Pares",
+  "peer": "Peer",
+  "peers": "Peers",
   "pending": "Pendente",
   "percentage": "Percentagem",
   "pin_hint": "O PIN é usado para verificar as ações realizadas com sua conta. Pode ser um valor alfanumérico curto e fácil de memorizar. Se você esquecer seu PIN, você pode simplesmente recriar sua conta usando a senha longa gerada anteriormente.",
@@ -301,10 +301,10 @@
   "register": "Registro",
   "register_alias": "Registrar Alias",
   "repeat": "Repetir",
-  "request_burst": "Solicitar assinatura",
+  "request_burst": "Solicitar Signa",
   "request_processing_time": "Solicitar tempo de processamento",
   "reset_recipients": "Redefinir destinatários",
-  "reward_recipient": "Destinatário da recompensa",
+  "reward_recipient": "Endereço do Polo",
   "same_out": "Mesma quantidade",
   "scoop_num": "Número da colher",
   "search": "Procurar",
@@ -323,8 +323,8 @@
   "sender_id": "ID do remetente",
   "sender_public_key": "Chave Pública do Remetente",
   "set_account_info": "Definir informações da conta",
-  "set_reward_recipient": "Definir Destinatário da Recompensa",
-  "settings": "Definições",
+  "set_reward_recipient": "Junte-sa ao Pool",
+  "settings": "Configurações",
   "signature": "Assinatura",
   "signature_hash": "Hash de assinatura",
   "smart_contract": "Contrato Inteligente",
@@ -341,7 +341,7 @@
   "success_clipboard_copy": "Copiado para a área de transferência com sucesso.",
   "success_send_money": "Signa foi enviada.",
   "success_set_account_info": "As informações da sua conta foram salvas com sucesso.",
-  "success_set_reward_recipient": "O destinatário do seu prêmio foi definido com sucesso!",
+  "success_set_reward_recipient": "Você se juntou ao pool com sucesso!",
   "suggested_fee": "Taxas sugeridas",
   "tabulator": "Tabulador",
   "time": "Tempo",
@@ -394,17 +394,17 @@
   "balance_locked": "Saldo Bloqueado",
   "balance_available": "Saldo disponível",
   "commitment": "Comprometimento",
-  "set_commitment": "Definir Compromisso",
-  "add_commitment": "Adicionar Compromisso",
-  "revoke_commitment": "Revogar Compromisso",
-  "reward_recipient_assignment": "Atribuição de recompensa",
+  "set_commitment": "Definir Comprometimento",
+  "add_commitment": "Adicionar Comprometimento",
+  "revoke_commitment": "Revogar Comprometimento",
+  "reward_recipient_assignment": "Junte-se ao Pool",
   "mining": "Mineração",
-  "applied_commitment": "Compromisso Aplicado",
-  "success_set_commitment": "Atualizou com sucesso seu compromisso de mineração",
-  "error_set_commitment": "Erro ao atualizar o compromisso de mineração. Lembre-se de que você precisa esperar 1440 blocos antes de cancelar seu compromisso.",
-  "commitment_blocks_enabled": "blocos ausentes até que o compromisso possa ser revogado",
-  "no_reward_recipient": "Você ainda não tem nenhum destinatário de recompensa definido",
-  "commitment_unsupported": "O Nó selecionado atualmente não suporta o Compromisso de Mineração. Selecione um nó com pelo menos a versão 3+.",
+  "applied_commitment": "Comprometimento Aplicado",
+  "success_set_commitment": "Atualizou com sucesso seu comprometimento de mineração",
+  "error_set_commitment": "Erro ao atualizar o comprometimento de mineração. Lembre-se de que você precisa esperar 1440 blocos antes de cancelar seu comprometimento.",
+  "commitment_blocks_enabled": "blocos ausentes até que o comprometimento possa ser revogado",
+  "no_reward_recipient": "Você ainda não se juntou ao nenhum Pool",
+  "commitment_unsupported": "O Nó selecionado atualmente não suporta o comprometimento de mineração. Selecione um nó com pelo menos a versão 3+.",
   "copy_account_address_extended": "Copiar endereço estendido",
   "copy_account_publickey": "Copiar chave pública",
   "manual_nodeselection": "Seleção Manual de Nó",
@@ -413,7 +413,7 @@
   "node_successfully_connected": "Conectado com sucesso ao nó",
   "selected_node": "Nó selecionado atualmente",
   "toggle_nodeselection_mode": "Alterne para alternar entre seleção de nó manual ou automática",
-  "commitment_zero_balance": "Você ainda não adicionou nenhum compromisso",
+  "commitment_zero_balance": "Você ainda não adicionou nenhum comprometimento",
   "multiple_recipients": "Vários Destinatários",
   "self": "auto"
 }
