chore: minor improvements

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -415,5 +415,6 @@
   "toggle_nodeselection_mode": "Превключете, за да превключвате между ръчен или автоматичен избор на възел",
   "commitment_zero_balance": "Все още не сте добавили ангажимент",
   "multiple_recipients": "Няколко получатели",
-  "self": "себе си"
+  "self": "себе си",
+  "select_message_contact": "Изберете контакт, за да започнете съобщение"
 }
