--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -415,5 +415,6 @@
   "toggle_nodeselection_mode": "Εναλλαγή για εναλλαγή μεταξύ χειροκίνητης ή αυτόματης επιλογής κόμβων",
   "commitment_zero_balance": "Δεν έχετε προσθέσει ακόμη δέσμευση",
   "multiple_recipients": "Πολλοί παραλήπτες",
-  "self": "εαυτός"
+  "self": "εαυτός",
+  "select_message_contact": "Επιλέξτε μια επαφή για να ξεκινήσετε ένα μήνυμα"
 }
