--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -415,5 +415,6 @@
   "toggle_nodeselection_mode": "मैन्युअल या स्वचालित नोड चयन के बीच स्विच करने के लिए टॉगल करें",
   "commitment_zero_balance": "आपने अभी तक कोई प्रतिबद्धता नहीं जोड़ी है",
   "multiple_recipients": "एकाधिक प्राप्तकर्ता",
-  "self": "स्वयं"
+  "self": "स्वयं",
+  "select_message_contact": "संदेश शुरू करने के लिए किसी संपर्क का चयन करें"
 }
