--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -415,5 +415,6 @@
   "toggle_nodeselection_mode": "Переключитесь, чтобы переключаться между ручным или автоматическим выбором узла",
   "commitment_zero_balance": "У вас еще нет добавленных обязательств",
   "multiple_recipients": "Несколько получателей",
-  "self": "себя"
+  "self": "себя",
+  "select_message_contact": "Выберите контакт, чтобы начать сообщение"
 }
