--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -415,5 +415,6 @@
   "toggle_nodeselection_mode": "Перемикайте, щоб перемикатися між ручним або автоматичним вибором вузлів",
   "commitment_zero_balance": "Ви ще не додали жодного зобов’язання",
   "multiple_recipients": "Кілька одержувачів",
-  "self": "себе"
+  "self": "себе",
+  "select_message_contact": "Виберіть контакт, щоб розпочати повідомлення"
 }
