--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -415,5 +415,6 @@
   "toggle_nodeselection_mode": "Přepnutím přepínáte mezi ručním nebo automatickým výběrem uzlu",
   "commitment_zero_balance": "Zatím nemáte přidán žádný závazek",
   "multiple_recipients": "Více příjemců",
-  "self": "já"
+  "self": "já",
+  "select_message_contact": "Vyberte kontakt pro zahájení zprávy"
 }
