--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -415,5 +415,6 @@
   "toggle_nodeselection_mode": "Umschalten, um zwischen manueller oder automatischer Knotenauswahl zu wechseln",
   "commitment_zero_balance": "Du hast noch kein Commitment hinzugefügt",
   "multiple_recipients": "Mehrere Empfänger",
-  "self": "selbst"
+  "self": "selbst",
+  "select_message_contact": "Wähle einen Kontakt aus, um eine Nachricht zu senden"
 }
