--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -415,5 +415,6 @@
   "toggle_nodeselection_mode": "Alternar para cambiar entre selección de nodo manual o automática",
   "commitment_zero_balance": "Aún no has añadido ningún compromiso",
   "multiple_recipients": "Destinatarios múltiples",
-  "self": "uno mismo"
+  "self": "uno mismo",
+  "select_message_contact": "Seleccione un contacto para iniciar un mensaje"
 }
