--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -415,5 +415,6 @@
   "toggle_nodeselection_mode": "Vaihda vaihtaaksesi manuaalisen tai automaattisen solmuvalinnan välillä",
   "commitment_zero_balance": "Sinulle ei ole vielä lisätty sitoumusta",
   "multiple_recipients": "Useita vastaanottajia",
-  "self": "itse"
+  "self": "itse",
+  "select_message_contact": "Aloita viesti valitsemalla yhteyshenkilö"
 }
