--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -415,5 +415,6 @@
   "toggle_nodeselection_mode": "Alternar para cambiar entre a selección de nodos manual ou automática",
   "commitment_zero_balance": "Aínda non engadiches ningún compromiso",
   "multiple_recipients": "Varios destinatarios",
-  "self": "eu"
+  "self": "eu",
+  "select_message_contact": "Seleccione un contacto para iniciar unha mensaxe"
 }
