--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -415,5 +415,6 @@
   "toggle_nodeselection_mode": "手動または自動ノード選択を切り替えるトグル",
   "commitment_zero_balance": "まだコミットメントが追加されていません",
   "multiple_recipients": "複数の受信者",
-  "self": "自己"
+  "self": "自己",
+  "select_message_contact": "連絡先を選択してメッセージを開始してください"
 }
