--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -415,5 +415,6 @@
   "toggle_nodeselection_mode": "Alterne para alternar entre seleção de nó manual ou automática",
   "commitment_zero_balance": "Você ainda não adicionou nenhum comprometimento",
   "multiple_recipients": "Vários Destinatários",
-  "self": "auto"
+  "self": "auto",
+  "select_message_contact": "Selecione um contato para iniciar uma mensagem"
 }
