--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -415,5 +415,6 @@
   "toggle_nodeselection_mode": "Comutați pentru a comuta între selecția manuală sau automată a nodului",
   "commitment_zero_balance": "Nu ați adăugat încă niciun angajament",
   "multiple_recipients": "Destinatari multipli",
-  "self": "de sine"
+  "self": "de sine",
+  "select_message_contact": "Selectați un contact pentru a începe un mesaj"
 }
