fix: paste address directive

--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -7,7 +7,7 @@
   "account_created": "Sua conta foi criada",
   "account_id": "ID da conta",
   "account_import": "Importar conta existente",
-  "account_import_short": "Conta de importação",
+  "account_import_short": "Importar Conta",
   "account_info": "Informações da Conta",
   "account_watch": "Importe uma conta que você gostaria de observar apenas",
   "account_watch_short": "Observar Conta",
@@ -50,7 +50,7 @@
   "assets": "Ativos",
   "attachment": "Acessório",
   "back": "Voltar",
-  "balance": "Equilíbrio",
+  "balance": "Saldo",
   "base_target": "Alvo Base",
   "bid_order_cancellation": "Cancelamento do pedido de lance",
   "bid_order_placement": "Posicionamento de pedido de lance",
