fix: new font, i18n improvements

--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -84,7 +84,7 @@
   "confirmations": "Bestätigungen",
   "confirmed": "Bestätigt",
   "console": "Konsole",
-  "contacting_node": "Knoten wird kontaktiert...",
+  "contacting_node": "Peer wird kontaktiert...",
   "contacts": "Kontakte",
   "copy_account_address": "Adresse kopieren",
   "copy_account_id": "Konto-ID kopieren",
@@ -249,8 +249,8 @@
   "no_public_key_warning": "Achtung!: Dein Konto hat keinen öffentlichen Schlüssel! Dies bedeutet, dass es nicht so geschützt ist wie andere Konten. Bitte aktiviere Dein Konto, um den öffentlichen Schlüssel zu erhalten.",
   "no_transactions_yet": "Noch keine Transaktionen.",
   "node_hint_no_multiout": "Keine Multiout-Zahlungen unterstützt",
-  "node_not_set": "Der Knoten konnte nicht geändert werden. Höchstwahrscheinlich ist es nicht erreichbar.",
-  "node_set_success": "Knoten erfolgreich geändert",
+  "node_not_set": "Der Peer konnte nicht geändert werden. Höchstwahrscheinlich ist er nicht erreichbar.",
+  "node_set_success": "Peer erfolgreich geändert",
   "non_verified_source": "Unbekannte, potenziell unsichere Quelle",
   "nonce": "Nonce",
   "none": "Keiner",
@@ -295,7 +295,7 @@
   "recipient_no_public_key": "Das Empfängerkonto hat keinen öffentlichen Schlüssel, d.h. es hat noch nie eine ausgehende Transaktion stattgefunden. Das Konto hat einen Saldo von __burst__ Signa. Bitte überprüfe die Empfängeradresse vor dem Absenden.",
   "recipients": "Empfänger",
   "record": "Aufzeichnung",
-  "referenced_transaction_full_hash": "Referenzierter Transaktionsvoller Hash",
+  "referenced_transaction_full_hash": "Referenzierter Hash",
   "refund": "Rückerstattung",
   "refunded": "Zurückerstattet",
   "register": "Registrieren",
@@ -306,12 +306,12 @@
   "reset_recipients": "Empfänger zurücksetzen",
   "reward_recipient": "Pooladresse",
   "same_out": "Gleicher Betrag",
-  "scoop_num": "Schaufelnummer",
+  "scoop_num": "Scoop",
   "search": "Suche",
   "search_or_start_message": "Neue Nachricht suchen oder starten",
   "secure": "Sichern",
   "seed_password_generator": "Bewege den Cursor, um den Zufallszahlengenerator zu starten und eine sichere Passphrase zu erstellen.",
-  "select_node": "Knoten auswählen",
+  "select_node": "Peer auswählen",
   "select_node_description": "Wählen einen Peer aus, zu dem Du eine Verbindung herstellen möchtest. Du kannst einen vorgeschlagenen Peers verwenden, aber auch eine beliebige URL eingeben.",
   "select_recipients": "Empfänger auswählen",
   "sell": "Verkaufen",
@@ -324,7 +324,7 @@
   "sender_public_key": "Öffentlicher Schlüssel des Absenders",
   "set_account_info": "Kontoinformationen festlegen",
   "set_reward_recipient": "Pool beitreten",
-  "settings": "die Einstellungen",
+  "settings": "Einstellungen",
   "signature": "Unterschrift",
   "signature_hash": "Signatur-Hash",
   "smart_contract": "Intelligenter Vertrag",
@@ -334,7 +334,7 @@
   "standard_fee": "Standard",
   "state": "Zustand",
   "status": "Status",
-  "submit": "einreichen",
+  "submit": "Absenden",
   "subscriptions": "Abonnements",
   "subtype": "Untertyp",
   "success_alias_register": "Alias erfolgreich registriert.",
@@ -404,15 +404,15 @@
   "error_set_commitment": "Fehler beim Aktualisieren des Mining-Commitment. Beachte, dass Du ggf. 1440 Blöcke warten musst, bevor Du Dein Commitment widerrufen kannst.",
   "commitment_blocks_enabled": "Blöcke fehlen bis das Commitment widerrufen werden kann",
   "no_reward_recipient": "Du bist noch keinem Pool beigetreten",
-  "commitment_unsupported": "Der aktuell ausgewählte Knoten unterstützt kein Mining Commitment. Bitte wähle einen Knoten mit mindestens Version 3+ aus.",
+  "commitment_unsupported": "Der aktuell ausgewählte Peer unterstützt kein Mining Commitment. Bitte wähle einen Peer mit mindestens Version 3+ aus.",
   "copy_account_address_extended": "Erweiterte Adresse kopieren",
   "copy_account_publickey": "Öffentlichen Schlüssel kopieren",
-  "manual_nodeselection": "Manuelle Knotenauswahl",
-  "automatic_nodeselection": "Automatische Knotenauswahl",
-  "no_reliable_node_reachable": "Konnte keinen zuverlässigen Knoten erreichen. Bitte überprüfe, ob Deine Internetverbindung in Ordnung ist.",
-  "node_successfully_connected": "Erfolgreich mit dem Knoten verbunden",
-  "selected_node": "Aktuell ausgewählter Knoten",
-  "toggle_nodeselection_mode": "Umschalten, um zwischen manueller oder automatischer Knotenauswahl zu wechseln",
+  "manual_nodeselection": "Manuelle Peerauswahl",
+  "automatic_nodeselection": "Automatische Peerauswahl",
+  "no_reliable_node_reachable": "Konnte keinen zuverlässigen Peer erreichen. Bitte überprüfe, ob Deine Internetverbindung in Ordnung ist.",
+  "node_successfully_connected": "Erfolgreich mit dem Peer verbunden",
+  "selected_node": "Aktuell ausgewählter Peer",
+  "toggle_nodeselection_mode": "Umschalten, um zwischen manueller oder automatischer Peerauswahl zu wechseln",
   "commitment_zero_balance": "Du hast noch kein Commitment hinzugefügt",
   "multiple_recipients": "Mehrere Empfänger",
   "self": "selbst",
