fix: tx owner comparison

--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -189,7 +189,7 @@
   "fee": "Taxa",
   "fee_nqt": "Taxa",
   "feedback": "Comentários",
-  "finish": "Terminar",
+  "finish": "Finalizar",
   "forging": "Forjamento",
   "from": "A partir de",
   "full_hash": "Hash completo",
