--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -416,5 +416,7 @@
   "commitment_zero_balance": "Δεν έχετε προσθέσει ακόμη δέσμευση",
   "multiple_recipients": "Πολλοί παραλήπτες",
   "self": "εαυτός",
-  "select_message_contact": "Επιλέξτε μια επαφή για να ξεκινήσετε ένα μήνυμα"
+  "select_message_contact": "Επιλέξτε μια επαφή για να ξεκινήσετε ένα μήνυμα",
+  "youve_got_from": "Ο λογαριασμός __a__ πήρε __b__ από __c__",
+  "you_sent_to": "Ο λογαριασμός __a__ έστειλε __b__ στο __c__"
 }
