--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -134,7 +134,7 @@
   "error_bid_order_filled": "Bid order already filled.",
   "error_clipboard_copy": "Copying to the clipboard failed.",
   "error_decryption_failed": "Decryption failed.",
-  "error_dgs_delivery": "An unknown error occured! Marketplace purchase may or may not be delivered.",
+  "error_dgs_delivery": "An unknown error occurred! Marketplace purchase may or may not be delivered.",
   "error_dgs_delivery_deadline_expired": "Delivery deadline has already expired.",
   "error_dgs_not_listed": "Goods not yet listed or already delisted.",
   "error_dgs_price_quantity_changed": "Goods price or quantity changed.",
@@ -176,12 +176,12 @@
   "error_recipient_no_public_key": "Recipient account does not have public key.",
   "error_recipient_no_public_key_announcement": "Recipient account does not have a public key, must attach a public key announcement.",
   "error_refund_already_sent": "Refund already sent.",
-  "error_send_money": "An unknown error occured! Signa may or may not be sent.",
+  "error_send_money": "An unknown error occurred! Signa may or may not be sent.",
   "error_server_connect": "Could not connect to server.",
-  "error_set_reward_recipient": "An unknown error occured! You could not join the pool.",
+  "error_set_reward_recipient": "An unknown error occurred! You could not join the pool.",
   "error_transaction_already_signed": "Transaction already signed.",
   "error_transaction_not_signed": "Transaction is not signed yet.",
-  "error_unknown": "An unknown error occured.",
+  "error_unknown": "An unknown error occurred.",
   "error_unknown_name": "Unknown __name__.",
   "error_wrong_buyer_for_alias": "Wrong buyer for alias.",
   "escrow": "Escrow",
@@ -390,7 +390,7 @@
   "your_address": "Your Address",
   "your_name": "Your Name",
   "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Signa!",
+  "youve_got_burst": "You've got Signa",
   "balance_locked": "Locked Balance",
   "balance_available": "Available Balance",
   "commitment": "Commitment",
@@ -416,5 +416,7 @@
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
   "self": "self",
-  "select_message_contact": "Select a contact to start a message"
+  "select_message_contact": "Select a contact to start a message",
+  "youve_got_from": "Account __a__ got __b__ from __c__",
+  "you_sent_to": "Account __a__ sent __b__ to __c__"
 }
