--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -416,5 +416,7 @@
   "commitment_zero_balance": "Henüz eklenmiş bir taahhüdünüz yok",
   "multiple_recipients": "Birden Çok Alıcı",
   "self": "öz",
-  "select_message_contact": "Mesaj başlatmak için bir kişi seçin"
+  "select_message_contact": "Mesaj başlatmak için bir kişi seçin",
+  "youve_got_from": "__a__ hesabı __c__'den __b__ aldı",
+  "you_sent_to": "__a__ hesabı __b__'yi __c__'ye gönderdi"
 }
