--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -416,5 +416,7 @@
   "commitment_zero_balance": "Aún no has añadido ningún compromiso",
   "multiple_recipients": "Destinatarios múltiples",
   "self": "uno mismo",
-  "select_message_contact": "Seleccione un contacto para iniciar un mensaje"
+  "select_message_contact": "Seleccione un contacto para iniciar un mensaje",
+  "youve_got_from": "La cuenta __a__ obtuvo __b__ de __c__",
+  "you_sent_to": "Cuenta __a__ enviada __b__ a __c__"
 }
