--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -416,5 +416,7 @@
   "commitment_zero_balance": "Aínda non engadiches ningún compromiso",
   "multiple_recipients": "Varios destinatarios",
   "self": "eu",
-  "select_message_contact": "Seleccione un contacto para iniciar unha mensaxe"
+  "select_message_contact": "Seleccione un contacto para iniciar unha mensaxe",
+  "youve_got_from": "A conta __a__ obtivo __b__ de __c__",
+  "you_sent_to": "A conta __a__ enviou __b__ a __c__"
 }
