--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -416,5 +416,7 @@
   "commitment_zero_balance": "Još niste dodali obvezu",
   "multiple_recipients": "Više primatelja",
   "self": "sebe",
-  "select_message_contact": "Odaberite kontakt da biste započeli poruku"
+  "select_message_contact": "Odaberite kontakt da biste započeli poruku",
+  "youve_got_from": "Račun __a__ dobio je __b__ od __c__",
+  "you_sent_to": "Račun __a__ poslan je __b__ na __c__"
 }
