--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -416,5 +416,7 @@
   "commitment_zero_balance": "Je hebt nog geen toezegging toegevoegd",
   "multiple_recipients": "Meerdere ontvangers",
   "self": "zelf",
-  "select_message_contact": "Selecteer een contact om een bericht te starten"
+  "select_message_contact": "Selecteer een contact om een bericht te starten",
+  "youve_got_from": "Account __a__ kreeg __b__ van __c__",
+  "you_sent_to": "Account __a__ heeft __b__ naar __c__ gestuurd"
 }
