--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -416,5 +416,7 @@
   "commitment_zero_balance": "Nie masz jeszcze dodanego zobowiązania",
   "multiple_recipients": "Wielu odbiorców",
   "self": "samego siebie",
-  "select_message_contact": "Wybierz kontakt, aby rozpocząć wiadomość"
+  "select_message_contact": "Wybierz kontakt, aby rozpocząć wiadomość",
+  "youve_got_from": "Konto __a__ otrzymało __b__ od __c__",
+  "you_sent_to": "Konto __a__ wysłane __b__ do __c__"
 }
