--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -416,5 +416,7 @@
   "commitment_zero_balance": "Zatiaľ nemáte pridaný žiadny záväzok",
   "multiple_recipients": "Viac príjemcov",
   "self": "ja",
-  "select_message_contact": "Vyberte kontakt, ktorý chcete spustiť"
+  "select_message_contact": "Vyberte kontakt, ktorý chcete spustiť",
+  "youve_got_from": "Účet __a__ získal __b__ od __c__",
+  "you_sent_to": "Účet __a__ bol odoslaný __b__ na adresu __c__"
 }
