--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -416,5 +416,7 @@
   "commitment_zero_balance": "Ви ще не додали жодного зобов’язання",
   "multiple_recipients": "Кілька одержувачів",
   "self": "себе",
-  "select_message_contact": "Виберіть контакт, щоб розпочати повідомлення"
+  "select_message_contact": "Виберіть контакт, щоб розпочати повідомлення",
+  "youve_got_from": "Обліковий запис __a__ отримав __b__ від __c__",
+  "you_sent_to": "Рахунок __a__ надісланий __b__ до __c__"
 }
