feat: added more nodes, introduced testnode selector

--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -418,5 +418,6 @@
   "self": "jo mateix",
   "select_message_contact": "Seleccioneu un contacte per iniciar un missatge",
   "youve_got_from": "El compte __a__ ha obtingut __b__ de __c__",
-  "you_sent_to": "El compte __a__ ha enviat __b__ a __c__"
+  "you_sent_to": "El compte __a__ ha enviat __b__ a __c__",
+  "show_testnet_nodes": "Mostra els nodes de Testnet"
 }
