--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -418,5 +418,6 @@
   "self": "itse",
   "select_message_contact": "Aloita viesti valitsemalla yhteyshenkilö",
   "youve_got_from": "Tili __a__ sai __b__ käyttäjältä __c__",
-  "you_sent_to": "Tili __a__ lähetti __b__ vastaanottajalle __c__"
+  "you_sent_to": "Tili __a__ lähetti __b__ vastaanottajalle __c__",
+  "show_testnet_nodes": "Näytä Testnet-solmut"
 }
