--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -418,5 +418,6 @@
   "self": "स्वयं",
   "select_message_contact": "संदेश शुरू करने के लिए किसी संपर्क का चयन करें",
   "youve_got_from": "खाता __a__ को __c__ से __b__ मिला",
-  "you_sent_to": "खाता __a__ ने __b__ को __c__ को भेजा"
+  "you_sent_to": "खाता __a__ ने __b__ को __c__ को भेजा",
+  "show_testnet_nodes": "टेस्टनेट नोड्स दिखाएं"
 }
