--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -418,5 +418,6 @@
   "self": "diri",
   "select_message_contact": "Pilih kontak untuk memulai pesan",
   "youve_got_from": "Akun __a__ mendapat __b__ dari __c__",
-  "you_sent_to": "Akun __a__ mengirim __b__ ke __c__"
+  "you_sent_to": "Akun __a__ mengirim __b__ ke __c__",
+  "show_testnet_nodes": "Tampilkan Node Testnet"
 }
