--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -418,5 +418,6 @@
   "self": "auto",
   "select_message_contact": "Selecione um contato para iniciar uma mensagem",
   "youve_got_from": "A conta __a__ recebeu __b__ de __c__",
-  "you_sent_to": "Conta __a__ enviada __b__ para __c__"
+  "you_sent_to": "Conta __a__ enviada __b__ para __c__",
+  "show_testnet_nodes": "Mostrar nós Testnet"
 }
