--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -418,5 +418,6 @@
   "self": "de sine",
   "select_message_contact": "Selectați un contact pentru a începe un mesaj",
   "youve_got_from": "Contul __a__ a primit __b__ de la __c__",
-  "you_sent_to": "Contul __a__ a trimis __b__ la __c__"
+  "you_sent_to": "Contul __a__ a trimis __b__ la __c__",
+  "show_testnet_nodes": "Afișați nodurile Testnet"
 }
