--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -418,5 +418,6 @@
   "self": "自己",
   "select_message_contact": "选择联系人以开始消息",
   "youve_got_from": "帐户 __a__ 从 __c__ 获得了 __b__",
-  "you_sent_to": "帐户 __a__ 向 __c__ 发送了 __b__"
+  "you_sent_to": "帐户 __a__ 向 __c__ 发送了 __b__",
+  "show_testnet_nodes": "显示测试网节点"
 }
