--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -418,5 +418,6 @@
   "self": "soi",
   "select_message_contact": "Sélectionnez un contact pour commencer un message",
   "youve_got_from": "Le compte __a__ a obtenu __b__ de __c__",
-  "you_sent_to": "Le compte __a__ a envoyé __b__ à __c__"
+  "you_sent_to": "Le compte __a__ a envoyé __b__ à __c__",
+  "show_testnet_nodes": "Afficher les nœuds Testnet"
 }
