--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -418,5 +418,6 @@
   "self": "自己",
   "select_message_contact": "連絡先を選択してメッセージを開始してください",
   "youve_got_from": "アカウント __a__ は __c__ から __b__ を取得しました",
-  "you_sent_to": "アカウント __a__ が __b__ を __c__ に送信しました"
+  "you_sent_to": "アカウント __a__ が __b__ を __c__ に送信しました",
+  "show_testnet_nodes": "Testnetノードを表示する"
 }
