--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -418,5 +418,6 @@
   "self": "savarankiškai",
   "select_message_contact": "Pasirinkite kontaktą, kad pradėtumėte pranešimą",
   "youve_got_from": "Sąskaita __a__ gavo __b__ iš __c__",
-  "you_sent_to": "Sąskaita __a__ išsiųsta __b__ į __c__"
+  "you_sent_to": "Sąskaita __a__ išsiųsta __b__ į __c__",
+  "show_testnet_nodes": "Rodyti „Testnet“ mazgus"
 }
