--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -418,5 +418,6 @@
   "self": "zelf",
   "select_message_contact": "Selecteer een contact om een bericht te starten",
   "youve_got_from": "Account __a__ kreeg __b__ van __c__",
-  "you_sent_to": "Account __a__ heeft __b__ naar __c__ gestuurd"
+  "you_sent_to": "Account __a__ heeft __b__ naar __c__ gestuurd",
+  "show_testnet_nodes": "Testnet-knooppunten weergeven"
 }
