--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -418,5 +418,6 @@
   "self": "ja",
   "select_message_contact": "Vyberte kontakt, ktorý chcete spustiť",
   "youve_got_from": "Účet __a__ získal __b__ od __c__",
-  "you_sent_to": "Účet __a__ bol odoslaný __b__ na adresu __c__"
+  "you_sent_to": "Účet __a__ bol odoslaný __b__ na adresu __c__",
+  "show_testnet_nodes": "Zobraziť uzly Testnet"
 }
