--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -418,5 +418,6 @@
   "self": "себе",
   "select_message_contact": "Виберіть контакт, щоб розпочати повідомлення",
   "youve_got_from": "Обліковий запис __a__ отримав __b__ від __c__",
-  "you_sent_to": "Рахунок __a__ надісланий __b__ до __c__"
+  "you_sent_to": "Рахунок __a__ надісланий __b__ до __c__",
+  "show_testnet_nodes": "Показати вузли Testnet"
 }
