--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -419,5 +419,6 @@
   "select_message_contact": "Vyberte kontakt pro zahájení zprávy",
   "youve_got_from": "Účet __a__ dostal __b__ od __c__",
   "you_sent_to": "Účet __a__ odeslán __b__ do __c__",
-  "show_testnet_nodes": "Zobrazit uzly Testnet"
+  "show_testnet_nodes": "Zobrazit uzly Testnet",
+  "message_too_long": "Zpráva je příliš dlouhá"
 }
