--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -419,5 +419,6 @@
   "select_message_contact": "Επιλέξτε μια επαφή για να ξεκινήσετε ένα μήνυμα",
   "youve_got_from": "Ο λογαριασμός __a__ πήρε __b__ από __c__",
   "you_sent_to": "Ο λογαριασμός __a__ έστειλε __b__ στο __c__",
-  "show_testnet_nodes": "Εμφάνιση κόμβων Testnet"
+  "show_testnet_nodes": "Εμφάνιση κόμβων Testnet",
+  "message_too_long": "Το μήνυμα είναι πολύ μεγάλο"
 }
