--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -419,5 +419,6 @@
   "select_message_contact": "Sélectionnez un contact pour commencer un message",
   "youve_got_from": "Le compte __a__ a obtenu __b__ de __c__",
   "you_sent_to": "Le compte __a__ a envoyé __b__ à __c__",
-  "show_testnet_nodes": "Afficher les nœuds Testnet"
+  "show_testnet_nodes": "Afficher les nœuds Testnet",
+  "message_too_long": "Le message est trop long"
 }
