--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -419,5 +419,6 @@
   "select_message_contact": "Seleccione un contacto para iniciar unha mensaxe",
   "youve_got_from": "A conta __a__ obtivo __b__ de __c__",
   "you_sent_to": "A conta __a__ enviou __b__ a __c__",
-  "show_testnet_nodes": "Mostrar os nodos de Testnet"
+  "show_testnet_nodes": "Mostrar os nodos de Testnet",
+  "message_too_long": "A mensaxe é demasiado longa"
 }
