--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -419,5 +419,6 @@
   "select_message_contact": "Odaberite kontakt da biste započeli poruku",
   "youve_got_from": "Račun __a__ dobio je __b__ od __c__",
   "you_sent_to": "Račun __a__ poslan je __b__ na __c__",
-  "show_testnet_nodes": "Prikaži čvorove Testnet"
+  "show_testnet_nodes": "Prikaži čvorove Testnet",
+  "message_too_long": "Poruka je predugačka"
 }
