--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -419,5 +419,6 @@
   "select_message_contact": "Изаберите контакт да бисте започели поруку",
   "youve_got_from": "Налог __а__ добио је __б__ од __ц__",
   "you_sent_to": "Налог __а__ је послат __б__ на __ц__",
-  "show_testnet_nodes": "Прикажи чворове Тестнет"
+  "show_testnet_nodes": "Прикажи чворове Тестнет",
+  "message_too_long": "Порука је предугачка"
 }
