--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -419,5 +419,6 @@
   "select_message_contact": "选择联系人以开始消息",
   "youve_got_from": "帐户 __a__ 从 __c__ 获得了 __b__",
   "you_sent_to": "帐户 __a__ 向 __c__ 发送了 __b__",
-  "show_testnet_nodes": "显示测试网节点"
+  "show_testnet_nodes": "显示测试网节点",
+  "message_too_long": "消息过长"
 }
