--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -2,7 +2,7 @@
   "auth": {
     "errors": {
       "accountExist": "Account already imported",
-      "incorrectAddress": "Incorrect BURST-address",
+      "incorrectAddress": "Incorrect address",
       "incorrectPasscode": "Incorrect passcode",
       "incorrectPassphrase": "Incorrect passphrase",
       "insecurePin": "Insecure PIN, recommended {{length}} chars minimum"
@@ -27,7 +27,7 @@
         "createAccount": "Create account",
         "noAccounts": {
           "hint": "Please add an account to get started.",
-          "title": "Welcome to Burst"
+          "title": "Welcome to Signum"
         },
         "title": "Accounts"
       },
@@ -65,9 +65,9 @@
       },
       "importAccount": {
         "activeAccount": "Active account",
-        "activeAccountHint": "Active accounts are used for making BURST transactions. Requires user generate a passphrase or provide one. Requires a user create a PIN for transactions. The passphrase is only used once locally to encrypt your private key; it is not stored anywhere.",
+        "activeAccountHint": "Active accounts are used for making transactions. Requires user generate a passphrase or provide one. Requires a user create a PIN for transactions. The passphrase is only used once locally to encrypt your private key; it is not stored anywhere.",
         "import": "Import",
-        "passiveAccountHint": "Passive accounts are useful if you know a BURST address, but don't intend on making any transactions. Adds increased security. Can be converted to an active account at any time.",
+        "passiveAccountHint": "Passive accounts are useful if you know an address, but don't intend on making any transactions. Adds increased security. Can be converted to an active account at any time.",
         "title": "Import account",
         "showPassphrase": "Show passphrase"
       }
@@ -89,9 +89,9 @@
         "name": "BTC",
         "value": "₿ {{value}}"
       },
-      "BURST": {
-        "name": "BURST",
-        "value": "Ƀ {{value}}"
+      "SIGNA": {
+        "name": "SIGNA",
+        "value": "Ꞩ {{value}}"
       },
       "USD": {
         "name": "USD",
@@ -160,18 +160,18 @@
         "title": "Send",
         "button": "Swipe to Send",
         "to": "To",
-        "total": "Total: Ƀ {{value}}",
+        "total": "Total: Ꞩ {{value}}",
         "noPublicKey": "Please confirm address before sending.",
         "invalidAddress": "This address is not valid.",
         "zilOutage": "Unable to fetch from the ZIL API.",
-        "success": "Successfully sent {{amount}} BURST to {{address}}.",
-        "failure": "Failed to send BURST. Please check your entries and try again.",
+        "success": "Successfully sent {{amount}} SIGNA to {{address}}.",
+        "failure": "Failed to send Signa. Please check your entries and try again.",
         "encrypt": "Encrypt Message?",
         "addMessage": "Add a Message?",
         "message": "Message"
       },
       "scan": {
-        "title": "Scan BURST QR Code"
+        "title": "Scan QR Code"
       }
     }
   },
@@ -184,7 +184,7 @@
         "confirmErase": "Confirm - Erase and Reset",
         "changeLanguage": "Select Language",
         "selectNode": "Select Node",
-        "copyright": "Copyright © Burst Apps Team"
+        "copyright": "Copyright © Signum Network"
       }
     }
   }
